--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.vlad.Homework2</groupId>
   <artifactId>HW2</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>HW2</name>
   <!-- FIXME change it to the project's website -->
