final commit, all tasks done

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <mainClass>com.vlad.Homework2.App</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
@@ -71,6 +78,7 @@
           <version>3.0.0</version>
         </plugin>
       </plugins>
+
     </pluginManagement>
   </build>
 </project>
